plugin_LTLIBRARIES = libgstPaVE2Parse.la

# sources used to compile this plug-in
libgstPaVE2Parse_la_SOURCES = gstPaVE2Parse.c gstPaVE2Parse.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstPaVE2Parse_la_CFLAGS = $(GST_CFLAGS)
libgstPaVE2Parse_la_LIBADD = $(GST_LIBS)
libgstPaVE2Parse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstPaVE2Parse_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

