plugin_LTLIBRARIES = libgstpave2parse.la

# sources used to compile this plug-in
libgstpave2parse_la_SOURCES = gstpave2parse.c gstpave2parse.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstpave2parse_la_CFLAGS = $(GST_CFLAGS)
libgstpave2parse_la_LIBADD = $(GST_LIBS)
libgstpave2parse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstpave2parse_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

